--- a/pork/Makefile.in
+++ b/pork/Makefile.in
@@ -9,7 +9,7 @@ PORK_OBJS = $(addsuffix .o, $(PORK_SRCS))
 
 .PHONY: all elsa_all clean distclean
 
-all: elsa_all stopwatch
+all: elsa_all stopwatch pobcpp
 
 ## FIXME it would be nice to pass our CXXFLAGS to the configure scripts
 ## of elsa et al.
@@ -22,6 +22,9 @@ elsa_all: $(ELSA_DIR)/Makefile
 stopwatch: stopwatch.o $(LIBPORK)
 	$(CXX) $(CXXFLAGS) -o $@ $+
 
+pobcpp: pobcpp.o $(LIBPORK)
+	$(CXX) $(CXXFLAGS) -o $@ $+
+
 piglet.o: piglet.h
 
 $(LIBPORK): elsa_all $(PORK_OBJS)
@@ -29,7 +32,7 @@ $(LIBPORK): elsa_all $(PORK_OBJS)
 	ar rs $@ $(PORK_OBJS)
 
 clean:
-	rm -f $(LIBPORK) stopwatch *.o *~ *.pyc
+	rm -f $(LIBPORK) stopwatch pobcpp *.o *~ *.pyc
 	$(MAKE) -C porky clean
 	for dir in smbase ast elkhound; do $(MAKE) -C $(ELSA_DIR)/$$dir clean; done
 	$(MAKE) -C $(ELSA_DIR) clean
